@@ -62,9 +62,9 @@ To=hardy
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 
-[PreRequists]
-Packages=release-upgrader-apt,release-upgrader-dpkg
-SourcesList=prerequists-sources.list
+;[PreRequists]
+;Packages=release-upgrader-apt,release-upgrader-dpkg
+;SourcesList=prerequists-sources.list
 ;SourcesList-ia64=prerequists-sources.list.ports
 ;SourcesList-hppa=prerequists-sources.list.ports
 
