@@ -5,11 +5,15 @@ update-manager (1:0.85.5) hardy; urgency=low
       LP: #162978, LP: #64473
     - fix getting prerequists for ports.ubuntu.com
       (thanks to lamont)
+  * DistUpgrade/DistUpgradeCache.py:
+    - keep the lists dir locked all the time to avoid a 
+      possible race
   * DistUpgrade/DistUpgrade.cfg:
     - added gobuntu-desktop to the list of supported
       meta-packages
   * data/update-manager.desktop.in:
     - remove deprecated entries (thanks to Kmos)
+  
 
  --
 
